<b><u> v2.27, 02.01.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add skin for XIV_Databar.
<font color=#FF8C00>&#9830;</font> Minor UI improvements.
<font color=#FF8C00>&#9830;</font> Update BigWigs skin.
<font color=#FF8C00>&#9830;</font> CleanUP: Removed: FriendAlert, MiniMapPing.
<font color=#FF8C00>&#9830;</font> Create an own ThreatBar on my Datatext Panel.
<font color=#FF8C00>&#9830;</font> New Year, new logo! :)

<b><u> v2.26, 19.12.2016</b></u>
<font color=#FF8C00>&#9830;</font> Minor Layout adjustments. Recommended AddOn: XIV_Databar.
<font color=#FF8C00>&#9830;</font> Add an option for ActionBarProfiles in Skin options.
<font color=#FF8C00>&#9830;</font> Adjust the QuestLog skin.
<font color=#FF8C00>&#9830;</font> Remove TargetIcon.

<b><u> v2.25, 05.12.2016</b></u>
<font color=#FF8C00>&#9830;</font> Deleted the Heal-Layout.
<font color=#FF8C00>&#9830;</font> Add a Talent skin in classColor.
<font color=#FF8C00>&#9830;</font> Remove options for Orderhall Zone Text.
<font color=#FF8C00>&#9830;</font> Adopt some AddOnSkins functions.
<font color=#FF8C00>&#9830;</font> Add some background Textures to LibSharedMedia.
<font color=#FF8C00>&#9830;</font> Tweak the WeakAura & EncounterJournal Skin.
<font color=#FF8C00>&#9830;</font> Add a skin for ActionBarProfiles.

<b><u> v2.24, 30.11.2016</b></u>
<font color=#FF8C00>&#9830;</font> Changed AddOnSkins embedded settings for Skada.
<font color=#FF8C00>&#9830;</font> Remove the MUI SpeccSwitch Datatext. I use the ElvUI default ones.
<font color=#FF8C00>&#9830;</font> Add WorldQuest Tooltip Icons.
<font color=#FF8C00>&#9830;</font> Add MiniMapPing. Show the PlayerName who pinged on the MiniMap.
<font color=#FF8C00>&#9830;</font> Pepe is now in your flightMode. :)
<font color=#FF8C00>&#9830;</font> Fix install steps messages.
<font color=#FF8C00>&#9830;</font> Change readyCheck textures.
<font color=#FF8C00>&#9830;</font> Add a ChatTab Datatext Panel.